fixed the bannder container butten border

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,7 @@
     padding: 20px 43px 20px 43px;
     margin-left: 240px;
     margin-bottom: 167px;
+    border:none;
 }
 .text-container a{
     text-decoration: none;
